force-app/main/default/objects/Contact/fields/cadmus_sign2__LocaleSidKey__c.field-meta.xml
<CustomField>
    <fullName>cadmus_sign2__LocaleSidKey__c</fullName>
    <label>Locale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>fr</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>de</fullName>
                <label>German</label>
            </value>
            <value>
                <fullName>nl</fullName>
                <label>Dutch</label>
            </value>
            <value>
                <fullName>es</fullName>
                <label>Spanish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>