force-app/main/default/objects/Contact/fields/Current_discounts__c.field-meta.xml
<CustomField>
    <fullName>Current_discounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Preference displayed in myLumon Portal</description>
    <label>Current discounts</label>
    <type>Checkbox</type>
</CustomField>