force-app/main/default/objects/Contact/fields/isMigrated__c.field-meta.xml
<CustomField>
    <fullName>isMigrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the Record is created in Salesforce or Migrated</description>
    <label>isMigrated</label>
    <type>Checkbox</type>
</CustomField>