force-app/main/default/objects/Contact/fields/LanguagePreference__c.field-meta.xml
<CustomField>
    <fullName>LanguagePreference__c</fullName>
    <label>Language Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Languages</valueSetName>
    </valueSet>
</CustomField>