force-app/main/default/objects/Contact/fields/New_products_and_services__c.field-meta.xml
<CustomField>
    <fullName>New_products_and_services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Preference displayed in myLumon Portal</description>
    <label>New products and services</label>
    <type>Checkbox</type>
</CustomField>