force-app/main/default/objects/Contact/fields/Other_Countries_Sync_to_MC__c.field-meta.xml
<CustomField>
    <fullName>Other_Countries_Sync_to_MC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to be used by marketing cloud to define MC</description>
    <label>Other Countries Sync to MC</label>
    <type>Checkbox</type>
</CustomField>