force-app/main/default/objects/Contact/fields/SMS_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Opt In</label>
    <type>Checkbox</type>
</CustomField>