force-app/main/default/objects/Contact/fields/Sync_to_MC_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_MC_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field will automatically be checked when SMS Opt in or Email opt in is true.</description>
    <label>Sync to MC</label>
    <type>Checkbox</type>
</CustomField>